--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Liberate Your Mind | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Stubborn trading! The cost of ignoring the market...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Letting Go - The Path to Unconditional Well Being</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Japanese Wagyu Texas BBQ Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1344,7 +1344,7 @@
                     <div class="video-info">
                         <h3>Week 2 UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Stubborn trading! The cost of ignoring the market...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5580,7 +5580,7 @@
                         <div class="video-info">
                             <h3>Week 2 UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Liberate Your Mind | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Letting Go - The Path to Unconditional Well Being</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Japanese Wagyu Texas BBQ Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
