--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
                     <div class="video-info">
                         <h3>I GOT SCHOOLED BY NEW YORK-PIZZA GUY AT HOME 100%</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">47 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=CEkHRlizrFI" target="_blank">
-                    <img src="https://i.ytimg.com/vi/CEkHRlizrFI/mqdefault.jpg" alt="SIDEMEN TAKE A DRIVING TEST">
+                    <img src="https://i.ytimg.com/vi/CEkHRlizrFI/mqdefault.jpg" alt="SIDEMEN DRIVING TEST">
                     <div class="video-info">
-                        <h3>SIDEMEN TAKE A DRIVING TEST</h3>
+                        <h3>SIDEMEN DRIVING TEST</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">2 hours ago</div>
                     </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Liberate Your Mind | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Stubborn trading! The cost of ignoring the market...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Letting Go - The Path to Unconditional Well Being</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Japanese Wagyu Texas BBQ Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Stubborn trading! The cost of ignoring the market...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Liberate Your Mind | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Letting Go - The Path to Unconditional Well Being</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>I GOT SCHOOLED BY NEW YORK-PIZZA GUY AT HOME 100%</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">47 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8750,7 +8750,7 @@
                         <div class="video-info">
                             <h3>How to Make Pizza: Canotto Style | Contemporary Neapolitan Pizza</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,9 +9572,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=CEkHRlizrFI" target="_blank">
-                        <img src="https://i.ytimg.com/vi/CEkHRlizrFI/mqdefault.jpg" alt="SIDEMEN TAKE A DRIVING TEST">
+                        <img src="https://i.ytimg.com/vi/CEkHRlizrFI/mqdefault.jpg" alt="SIDEMEN DRIVING TEST">
                         <div class="video-info">
-                            <h3>SIDEMEN TAKE A DRIVING TEST</h3>
+                            <h3>SIDEMEN DRIVING TEST</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">2 hours ago</div>
                         </div>
@@ -9587,7 +9587,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Japanese Wagyu Texas BBQ Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
